--- a/report/sections/ch4-description.tex
+++ b/report/sections/ch4-description.tex
@@ -9,4 +9,4 @@ The figure below shows the modules we are planning to develop during the Develop
 	\label{fig:developmentdiagram}
 \end{figure}
 
-The rover will consist of two main things: A LIDAR-Lite laser module, recording distances and creating a map using SLAM and a close proximity detection and navigation system.
+The rover will consist of two main parts: A LIDAR-Lite laser module, recording distances and creating a map using the SLAM technique and a close proximity detection and navigation system.
