--- a/report/sections/ch4-laser.tex
+++ b/report/sections/ch4-laser.tex
@@ -1,7 +1,7 @@
 \clearpage
 \section{Laser}
 
-Our laser of choice, the LIDAR-Lite SEN-13167, is a SoC (System-on-a-Chip) solution for optical distance measurements applications. It has a 4.7 - 5.5 V nominal and 6 V potentially maximum DC operating range. The sensor has a theoretical limit of a 40m range and 100Hz rep rate. The laser emitters' accuracy is estimated to be +/- 2.5cm with an acquisition time of less then 0.02s or 20ms. These specifications allows us to get an accurate image of the environments specified in our test cases~\cite{lidarsum}.
+Our laser of choice, the LIDAR-Lite SEN-13167, is a SoC (System-on-a-Chip) solution for optical distance measurements applications. It has a 4.7 - 5.5 V nominal and 6 V potentially maximum DC operating range. The sensor has a theoretical limit of a 40m range and 100Hz rep rate. The laser emitters' accuracy is estimated to be +/- 2.5cm with an acquisition time of less then 20ms. These specifications allows us to get an accurate image of the environments specified in our test cases\cite{lidarsum}.
 
 \begin{figure}[H]
 	\centering
@@ -27,9 +27,9 @@ The figure below shows an example of two reflections in the signal correlation r
 
 The sensor detection criteria may be selected to pick the nearer signal, the more distant signal or the strongest signal strength. Currently, we do not handle multiple reflection in our code.
 
-A reference signal is sent from the transmitter to the receiver, prior to the first distance measurement with a received pulse reflected from the target.The time delay between these two stored signals is estimated through a signal processing approach known as \textit{correlation}, which effectively provides a signature match between these two closely related signals. This accurately calculates the time delay, which is translated into distance based on the known speed-of-light, which is $\sim3.3ns\textbackslash m$\cite{howtopulse}.
+A reference signal is sent from the transmitter to the receiver, prior to the first distance measurement with a received pulse reflected from the target.The time delay between these two stored signals is estimated through a signal processing approach known as \textit{correlation}, which effectively provides a signature match between these two closely related signals. This accurately calculates the time delay, and is translated into distance based on the known speed-of-light, which is $\sim3.3ns\textbackslash m$\cite{howtopulse}.
 
-By default, the sensor runs at about 50Hz, but could vary given the signal strength and distance. To optimize the rep rate, it is possible to decrease the max-acquisition count (on register 0x02). By default, register 0x02 is 0x80 (128 in decimal), if you decrease this, the maximum number of acquisitions the sensor can take and use to get a reading, will decrease\cite{reprate}.
+By default, the sensor runs at about 50Hz, but could vary given the signal strength and distance. To optimize the rep rate, it is possible to decrease the max-acquisition count (on register 0x02). By default, register 0x02 is 0x80 (value 128 in decimal), if you decrease this, the maximum number of acquisitions the sensor can take and use to get a reading, will decrease, too\cite{reprate}.
 
 \pagebreak
 
@@ -71,31 +71,31 @@ The laser can be interfaced through $I^2C$ (Inter-Integrated Circuit) or PWM (Pu
 		  70: -- -- -- -- -- -- -- -- 
 \end{lstlisting}
 
-As the output shows, the address is available and the $I^2C$ connection is good. The -y 1 relates to the revision B of the Raspberry Pi board.
+As the output shows, the address is available and the $I^2C$ connection is usable. The -y 1 relates to the revision B of the Raspberry Pi board.
 
-We started using a library called lidarLite, which provides a simple C interface to the LIDAR-Lite laser on the Raspberry Pi. It is using the WiringPi GPIO access library written in C for the BCM2835 SoC, used on the Raspberry Pi. It is usable with C and C++ or many other languages with suitable wrappers. It was designed very familiarly to Arduino's wiring library~\cite{wiringPi-similarities}.
+We started using a library called lidarLite, which provides a simple C interface to the LIDAR-Lite laser on the Raspberry Pi. It is using the WiringPi access library written in C for the BCM2835 SoC, used on the Raspberry Pi. It is usable with C and C++ or many other languages with suitable wrappers. It was designed very familiarly to Arduino's wiring library~\cite{wiringPi-similarities}.
 
 With the lidarLite library\cite{lidarlib}, we managed to read data using the $I^2C$ protocol. To do this, we had to enable the kernel support for $I^2C$ on the Raspberry Pi~\cite{i2csetup}.
 
-A small program was been written in order to test the output of the laser sensor, namely to read out the distance value of the next closest point in centimeters. 
+A small program was been written in order to test the output of the laser sensor, to read out the distance value of the next closest point in centimeters. 
 
 \lstinputlisting[firstline=20, lastline=36, title=sample output from our laser test code, language=C++]{../code/sampleOutput.txt}
 
-This output is generated by the function called \textit{lidar\_read(int fd)} from the lidarLite library. This code simply calculates the low and high value from the sensor and returns the distance measurements in centimeters, in form of an integer value.
+This output is generated by the function called \textit{lidar\_read(int fd)} from the lidarLite library. This code simply calculates by low and high value from the sensor returns the distance measurement in centimeters, in form of an integer value.
 
 \clearpage
 
 \lstinputlisting[firstline=47, lastline=64, title=lidarLite.c, language=C]{../code/lidarlite_scan/src/lidarLite.c}
 
-We then tried to incorporate this measurement code with a stepper-motor, so that it would return the distances around a circle. The first version had the stepper-motor spinning the laser around at a constant speed, which was driven by an Arduino board (Code reference ~\ref{code:arduinocode}), while the laser made measurements that was driven by the Pi.
+We tried to incorporate this measurement code with a stepper-motor, so that it would return the distances around a circle. The first version had the stepper-motor spinning the laser around at a constant speed, which was driven by an Arduino board (Code reference ~\ref{code:arduinocode}), while the laser made measurements that was driven by the Pi.
 
 In order to determine how long it takes for the lidarLite \textit{lidar\_read(int fd)} function to execute, some testing was made.
 
 \lstinputlisting[firstline=1, lastline=8, title=laserTiming.cpp, language=C++]{../code/asd.cpp}
 
-This code was run with the settings of 1000 and 2000, each version was run 3 times. It was timed using the unix "time" utility.
+This code was run with the settings of 1000 and 2000, and each version was ran 3 times. The time was measured using the UNIX \textit{time} utility.
 
-Measurements of how long it takes to run \textit{lidar\_read(int fd)}
+Measurements of how long it takes to run \textit{lidar\_read(int fd)}:
 
 \begin{table}[H]
 	\centering
@@ -107,7 +107,7 @@ Measurements of how long it takes to run \textit{lidar\_read(int fd)}
 	\caption{Data from testing}
 \end{table}
 
-According to this data we can isolate the time it takes to execute the \textit{lidar\_read(int fd)} function from everything else:
+According to this data, we can isolate the time it takes to execute the \textit{lidar\_read(int fd)} function from everything else:
 
 $t_{total} = n*t_{lidar} + t_{rest}$ \\
 
@@ -119,28 +119,27 @@ Subtract the two equations:
 $23.782s = 1000*t_{lidar}$ \\
 $t_{lidar} = 0.023782s \approx 0.024s$ \\
 
+This proved ineffective, since the rotation and measurements were independent from each other. If the time for one measurement is not precise enough the measurements to be skewed over time.
 
-This proved ineffective, since the rotation and measurements were independent of each other. If the time for one measurement is not precise enough the measurements to be skewed over time.
+We then attempted to control the stepper-motor with the Raspberry Pi, added to the same code as we were running the laser with. However, the wiringPi library required root privileges, and ROS was not designed to be run under root privileges. The solution was to use a system call library to call an external file, which then would drive the stepper-motor. This makes the stepping and measuring synchronous, but making system call is very expensive in terms of computational resources, meaning that the code is significantly slower than the top speed that the laser is capable of.
 
-We then attempted to control the stepper-motor with the Raspberry Pi, added to the same code as we were running the laser with. However, the wiringPi library required root privileges, and ROS cannot easily be run with root privileges. The solution was to use a system call library to call some external code which would drive the stepper-motor. This makes the stepping and measuring synchronous, but making system call is very expensive in terms of computational resources, meaning that the code is significantly slower than the top speed that the laser is capable of.
-
-The full code written for the laser sensor can be found in the Appendix \ref{code:laser-full}. The sequence diagram below gives us an overview of the calls happening in the code:
+The full code written for the laser sensor can be found in Appendix \ref{code:laser-full}. The sequence diagram below gives us an overview of the calls happening in the code:
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.6]{images/laser-module.png}
-	\caption{Sequence diagram of the main function call in filename.cpp}
+	\caption{Sequence diagram of the main function call in main.cpp}
 	\label{fig:lasermodule}
 \end{figure}
 
 The first step is to initialize the the LIDAR-Lite laser sensor, by giving a dummy "wake-up" call to it via the wiringPi library, using the $I^2C$ protocol. There is a 100 millisec delay, which is necessary for the device to wake up and for the reading of registry to be completed. If the initialization fails, the program terminates by printing out a message to the terminal.
 
-Thereafter, we call the setUpPins() function which makes the system call 3 separate calls using the GPIO utility, setting up the GPIO on the Raspberry Pi to be able to communicate with the stepper motor.
+Thereafter, we call the \textit{setUpPins()} function which makes the system call 3 separate calls using the GPIO utility, setting up the GPIO on the Raspberry Pi to be able to communicate with the stepper motor.
 
-The initialization of ROS happens afterwards, by calling the \textit{init} function with arguments and the name of our module. The module name is used as the node name in ROS. In the next line, ROS also starts to advertise messages to \textbackslash\textit{scan}, where all the scan results are being pushed to.
+The initialization of ROS happens afterwards, by calling the \textit{init} function with arguments and the name of our module. The module name is used as the node name in ROS. In the next line, ROS also starts to advertise messages to the \textbackslash\textit{scan} topic, where all the scan results are being published to.
 
-The rest of the code consists of two loops, one \textit{while} loop and one \textit{for} loop. The \textit{while} loop loops until the node returns anything other than OK. In here, a new LaserScan is being created where we ask ROS for the current time, set some hardcoded values and populate an array with the readings. The \textit{for} loop is then used to get 200 readings from the LIDAR-Lite laser using the \textit{lidar\_read(fs)} function and also rotating the stepper motor before each of the calculation using the \textit{step(num\_step)} function. The \textit{step(num\_step)} function is calling a shell script that is doing calls to the GPIO interface, making the stepper motor to take 8 micro-steps, or in other terms, one full step. Before the end of the \textit{while} loop, the message is being published to \textbackslash\textit{scan}.
+The rest of the code consists of two loops, one \textit{while} loop and one \textit{for} loop. The \textit{while} loop continues until the node returns anything other than an \textit{OK} status code. In here, a new LaserScan variable is being created where we ask ROS for the current time, set some hardcoded values and populate an array with the readings. The \textit{for} loop is then used to get 200 readings from the LIDAR-Lite laser using the \textit{lidar\_read(fs)} function and also rotating the stepper motor before each of the calculation using the \textit{step(num\_step)} function. The \textit{step(num\_step)} function is calling a shell script that is doing calls to the GPIO interface, making the stepper motor to take 8 micro-steps, or in other terms, one full step. Before the end of the \textit{while} loop, the message is being published to \textbackslash\textit{scan}.
 
 \lstinputlisting[firstline=1, lastline=16, title=gpioStuff.sh, language=sh]{../code/gpioThing.sh}
 
-The only purpose of the code above, is to be called from the main file. The gpio utility is capable of interfacing with the GPIO pins on the Pi without root privileges. The change from low to high causes a micro-step, and 8 micro-steps make one full step.
+The only purpose of the code above, is to be called from the main file. The gpio utility is capable of interfacing with the GPIO pins on the Pi without root privileges. The change from low to high causes a micro-step, and 8 micro-steps makes one full step.
