--- a/report/sections/ch7-conclusion.tex
+++ b/report/sections/ch7-conclusion.tex
@@ -1,14 +1,9 @@
-%test results/general - Did we met the hypothesis?
-Based on the test results, we can conclude that our hypothesis was not covered completely, although the prototype is capable of creating a 2D map of its surroundings, it does not use that data for navigating the maze and finding its path from A to B. Our hypothesis still stands correct and it is doable with more time and resources at hand.
+Based on the test results, we can conclude that our hypothesis was not covered completely, although the prototype is capable of creating a 2D map of its surroundings, but it does not use that data for navigating the maze and finding its path from A to B. Our hypothesis still stands correct and it is doable with more time and resources at hand.
 
-%laser - Was it a good choice or not? Why?
-The laser of choice for the prototype seemed to be a good fit, but it does come with certain limitations compared to a higher-end model, like USB-support for faster data transfer, better refresh rate and acquisition rate. We have to keep in mind although that it comes with limitations, it does it job in creating a 2D map at quite an inexpensive cost.
+The laser of choice for the prototype seemed to be a good fit, but it does come with certain limitations compared to a higher-end model, like USB support for faster data transfer, better rep rate and acquisition rate. We have to keep in mind, although that it comes with limitations, it does its job in creating a 2D map at quite an inexpensive cost.
 
-%SLAM - Was it the right direction/technique?
-Mapping based on multiple sets of measurements, taken from different locations, is an incredibly difficult thing to do. It makes no sense to try and reinvent the wheel, as there are plenty of mapping libraries that are already usable. We choose to use SLAM because it is simultaneous, meaning the processing of the data, mapping, and navigating all go hand in hand. This is the best suited approach for mapping unknown terrain. However, our particular choice of SLAM library did not go very well with our choice of hardware, at least in the time frame we had for the project.
+Mapping based on multiple sets of measurements, taken from different locations, is an incredibly difficult thing to do. It makes no sense to try and reinvent the wheel, as there are plenty of mapping libraries that are already usable. We choose to use SLAM because it is simultaneous, meaning that the processing of data, mapping and navigating, all go hand in hand. This is the best suited approach for mapping unknown terrains. However, our particular choice of SLAM library did not go very well with our choice of hardware, at least in the time frame we had for the project.
 
-%autonomous navigation/collision-detection - What happened? What did we do?
-After realizing that getting the mapping part of our prototype to work required more effort than first expected, the scope for the rover navigation was made much smaller. Instead of a highly intelligent autonomous system, the autonomous navigation turned out to become a close proximity detection system. This system adds a low level of intelligence to the rover, which makes it avoid objects in its path and change the direction accordingly.
+After realizing that getting the mapping part of our prototype to work required more effort than first expected, the scope for the rover navigation system was made much smaller. Instead of a highly intelligent autonomous system, the autonomous navigation turned out to become a close proximity detection system. This system adds a low level of intelligence to the rover, which makes it to avoid objects in its path and change the direction accordingly.
  
-%summary - Are we satisfied with the results?
 Breaking down the prototype into two separate modules did help us to progress faster with the development, and these could be used as building blocks towards another future project that would take this topic into the next level, where the SLAM technique could be used on a moving rover and processing that information for navigational purposes. Even though we might have not covered all the points in our hypothesis, we did succeed to generate a 2D map using SLAM with a stationary camera and therefore meeting our main goal of creating a map. 
